# template-fastApi

./: .dockerignore  .env.example  .gitignore  .windsurfrules  AUDITORIA_AGENTES.md  AUDITORIA_COMPLETA.md  BUCLE_CORREGIDO.md  CONTEXT.md  Dockerfile  Entorno-IA-md  FIX_KEYERROR.md  FIX_UUID_ERROR.md  FLUJO_CORREGIDO.md  FLUJO_CORREGIDO_FINAL.md  README.md  README_BACKEND.md  debug_bh.py  debug_test.py  langgraph.json  migraciones.md  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.sh  test_agent.py  test_flow.py  test_simple.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: main.py
app/agents/: agent_state.py  booking_agent.py  config.py  contextClaudev1.md  init_chatgpt.md  main_master.py  manualAgents.md  niveles.md  state.py
app/agents/appointments/: appointments_node.py  extractor_confirmation.py  graph_builder.py  nodes.py  orchestrator.py  tools.py
app/agents/arch/: extractor_node.appointments  extractor_node.pybooking  extractor_node.pyidentity
app/agents/booking/: booking_node.py  bookingnode.py  extractor_booking.py  fuzzy_logic.py  graph_builder.py  logic.py  nodes.py  orchestrator.py  state.py  tools.py
app/agents/catalog/: nodes.py  tools.py
app/agents/core/: extractor_master.py  langgraph_client.py  maria_master.py  master_extractor.py  sanitizer.py  telemetry.py  thread_manager.py
app/agents/example/: main_master.py  tools.py
app/agents/formatters/: booking_options_formatter.py  catalog_formatter.py
app/agents/greeting/: nodes.py  (+2 more)
app/api/: __init__.py
app/core/: config.py  settings.py
app/db/: base.py  session.py
app/models/: __init__.py  appointments.py  audit_log.py  base.py  business_hours.py  clients.py  collaborators.py  departments.py  learning.py  metrics.py  reminder.py  services.py
app/schemas/: __init__.py  appointments.py  business_hours.py  client.py  collaborators.py  department.py  reminder.py  services.py
app/services/: appointment_manager.py  appointment_service.py  audit_service.py  availability.py  booking_scheduler.py  catalog.py  clients.py  reminder.py  service_selector.py  telegram.py  whatssap.py
app/utils/: __init__.py  availability.py
migrations/: env.py
migrations/versions/: 16d2db30479a_idx_appointment_start_time.py  1d800d1e1274_v2_0_add_color_to_department.py  35ef602b9cbb_add_appointments_table_with_.py  46798110e3cd_add_collaborators_table.py  75f00c3736a9_create_services_and_business_hours_.py  904287de2c05_v1_crear_estructura_departamentos.py  91010f9263ed_crear_tabla_aprendizaje_final.py  9a92946d4d71_v2_crear_tabla_auditoria.py  9b48c6eeca83_create_services_and_business_hours_.py  9c76e0f02ae6_add_collaborator_id_to_business_hours.py  e75790f8a2b5_v2_1_add_api_metrics_table.py
scripts/: setup_checkpoints.py  update_context.py
tests/: __init__.py  comandos.md  conftest.py  test_agent.py  test_agent_consistency.py  test_agents.py  test_appointment_service.py  test_appointments.py  test_booking_dates.py  test_booking_flow.py  test_booking_scheduler.py  test_business_hours.py  test_collision.py  test_despedidas.py  test_fallos.py  test_final_filtering.py  test_fuzzy_matching.py  test_integration.py  test_master_logic.py  test_multi_day_booking.py  test_real.py  test_routing_rules.py  test_saludos_estres.py  test_sanitizer.py  test_services.py  test_state_persistence.py  test_temporal_stress.py  test_tracing.py  test_valeria.py  test_valeria_behavior.py  testintentos.py
(+83 files in other folders)
